fix announcement close button color in dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -100,7 +100,7 @@ body {
 
 /* Announcement bar */
 .close {
-  color: var(--ifm-font-color-base);
+  color: var(--ifm-font-color-base) !important;
 }
 
 /* Navbar */
